Too big container => half-fixed... To affinate

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -603,7 +603,7 @@ a.display:active .icon-arrow {
 
 .container {
     width: 100%;
-    height: 100%;
+    height: 10%;
     max-width: 940px;
     margin: 0 auto;
     position: relative;
@@ -637,6 +637,7 @@ a.display:active .icon-arrow {
     width: 600px;
     z-index: 500;
 }
+
 
 /* OVERLAY */
 
